# dcf-teacher

./: .gitignore  README.md  all_tickers.csv  all_tickers.txt  section4.html  section5.html  vercel.json
backend/: 10-k-data.py  all_tickers.csv  all_tickers.txt  annual_report_data.py  app.py  dcf_calculator.py  download_html.py  financial_data.csv  finstr_example.R  gemini.py  parse_html.py  pyproject.toml  requirements.txt  scrapers.py  sec_api.py  start_server.py  test_sec_api.py
backend/app/: annual_report_data_.py  app.py  main.py  newapp.py
backend/app/helpers/: embed.py  gemini.py  helpers.py
backend/app/models/: fin_statements.py
backend/app/routes/: routes.py
backend/dd_ai/: chunker.py  embed.py  mongoqueries.py  my_chunks.json  parse.py  scrape.py  vectorStore.py
backend/volumes/etcd/member/snap/: db
backend/volumes/milvus/rdb_data/: 000011.sst  IDENTITY  LOG  MANIFEST-000004
backend/volumes/milvus/rdb_data_meta_kv/: 000009.sst  IDENTITY  LOG  MANIFEST-000004
backend/volumes/minio/.minio.sys/: format.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: CashFlowProjectionsComponent.js  ChatDrawer.css  ChatDrawer.js  FinancialStatements.js  GuideComponent.css  GuideComponent.js  GuideDrawer.js  InstructionsComponent.js  IntroSection.css  IntroSection.js  MultipleChoiceQuestion.js  Navbar.js  SectionComponent.js  Sidebar.js  StockSelection.css  StockSelection.js  TeacherChat.css  TeacherChat.js  UserSubmissionComponent.css  UserSubmissionComponent.js
frontend/src/hooks/: useChat.js  useQuestion.js
frontend/src/models/: gemini.js
frontend/src/pages/: About.js  Browse.js  StockPage.js  Tutorial.js
