[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.44.2"
gunicorn = "^23.0.0"
markupsafe = "^2.1.5"
jinja2 = "^3.1.4"
flask-cors = "^5.0.0"
google = "^3.0.0"
google-generativeai = "^0.8.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
